--- a/WingtipToys/Web.config
+++ b/WingtipToys/Web.config
@@ -11,6 +11,10 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WingtipToys-20210528012655.mdf;Initial Catalog=aspnet-WingtipToys-20210528012655;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+
+	  <add name="WingtipToys"
+        connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\wingtiptoys.mdf;Integrated Security=True"
+        providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
